slinkedlist remove